--- a/assessments/ex4/src/main/resources/com/example/ex4/students-list-tab.fxml
+++ b/assessments/ex4/src/main/resources/com/example/ex4/students-list-tab.fxml
@@ -2,26 +2,25 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="370.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ex4.controllers.StudentsList">
-            <TableView fx:id="tableView" prefHeight="370.0" prefWidth="292.0">
-                <columns>
-                    <TableColumn fx:id="firstNameCol" prefWidth="106.0" text="First name" />
-                    <TableColumn fx:id="secondNameCol" prefWidth="113.0" text="Second name" />
-                    <TableColumn fx:id="groupCol" prefWidth="72.0" text="Group" />
-                </columns>
-            </TableView>
-            <TextField fx:id="firstNameField" layoutX="312.0" layoutY="32.0" prefHeight="26.0" prefWidth="117.0" />
-            <Label layoutX="312.0" layoutY="14.0" text="First name" />
-            <TextField fx:id="secondNameField" layoutX="465.0" layoutY="32.0" prefHeight="26.0" prefWidth="117.0" />
-            <Label layoutX="465.0" layoutY="14.0" text="Second name" />
-            <Button layoutX="465.0" layoutY="85.0" mnemonicParsing="false" onAction="#add" prefHeight="26.0" prefWidth="115.0" text="Add student" />
-            <TextField fx:id="groupField" layoutX="312.0" layoutY="85.0" prefHeight="26.0" prefWidth="117.0" />
-            <Label layoutX="312.0" layoutY="67.0" text="Group" />
-            <Button layoutX="457.0" layoutY="330.0" mnemonicParsing="false" text="Import from .xlsx" />
-            <Button layoutX="316.0" layoutY="330.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="123.0" text="Import from .csv" />
+<AnchorPane prefHeight="370.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ex4.controllers.StudentsList">
+    <TableView fx:id="table" prefHeight="370.0" prefWidth="292.0" />
+
+    <Label layoutX="312.0" layoutY="14.0" text="First name" />
+    <TextField fx:id="firstNameField" layoutX="312.0" layoutY="32.0" prefHeight="26.0" prefWidth="117.0" />
+
+    <Label layoutX="465.0" layoutY="14.0" text="Second name" />
+    <TextField fx:id="secondNameField" layoutX="465.0" layoutY="32.0" prefHeight="26.0" prefWidth="117.0" />
+
+    <Label layoutX="312.0" layoutY="67.0" text="Group" />
+    <TextField fx:id="groupField" layoutX="312.0" layoutY="85.0" prefHeight="26.0" prefWidth="117.0" />
+
+    <Button layoutX="465.0" layoutY="85.0" mnemonicParsing="false" onAction="#addStudent" prefHeight="26.0" prefWidth="115.0" text="Add student" />
+    <Button layoutX="465.0" layoutY="134.0" mnemonicParsing="false" onAction="#deleteStudent" prefHeight="26.0" prefWidth="115.0" text="Delete student" />
+
+    <Button layoutX="316.0" layoutY="330.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="123.0" text="Import from .csv" />
+    <Button layoutX="457.0" layoutY="330.0" mnemonicParsing="false" text="Import from .xlsx" />
 </AnchorPane>
